# api-project-generator

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  test.py
api_project_generator/: main.py
api_project_generator/commands/: __init__.py  _create_api.py  _create_dto.py  _create_entity.py  _update_imports.py
api_project_generator/commands/create_api/: __init__.py  command.py  defaults.py  interface.py  modular.py  structure.py  templates.py
api_project_generator/core/: cache.py  config.py  dependencies.py  dirs.py  external.py  ide.py  local.py  manifest.py  project.py  user_data.py
api_project_generator/helpers/: dependencies.py  files.py  functions.py  git_repo.py  module_file.py  module_helper.py  repository.py  request.py  strings.py  utils.py
api_project_generator/models/: __init__.py  project_info.py  project_organization.py  pyproject_toml.py  version.py
examples/: CHANGELOG.md
examples/example-project/: .coveragerc  .gitignore  Dockerfile  README.md  alembic.ini  circus.ini  pyproject.toml
examples/example-project/alembic/: env.py  script.py.mako
examples/example-project/example_project/: main.py
examples/example-project/example_project/core/: log.py  settings.py
examples/example-project/example_project/database/: _model_finder.py  main.py
examples/example-project/example_project/database/tables/users/: __init__.py  _user.py
examples/example-project/example_project/dtos/: base.py
examples/example-project/example_project/dtos/enums/: __init__.py  _user_roles.py
examples/example-project/example_project/dtos/users/: __init__.py  _user_in.py
examples/example-project/example_project/exc/: __init__.py  _exception_handlers.py  _exceptions.py
examples/example-project/example_project/providers/: __init__.py  _database.py  _http.py
examples/example-project/example_project/routes/: __init__.py  _route.py
examples/example-project/example_project/routes/dependencies/: __init__.py  _database.py  _http.py
examples/example-project/example_project/utils/: __init__.py  _environment.py
examples/example-project/tests/: test_example_project.py
project_generator/: functions.py  main.py
project_generator/domain/: structure.py
project_generator/domain/models/: pyproject_toml.py
project_generator/services/: strings.py
stories/: .coveragerc  .gitignore  Dockerfile  alembic.ini  circus.ini  pyproject.toml
stories/alembic/: env.py  script.py.mako
stories/stories/: main.py
stories/stories/core/: log.py  settings.py
stories/stories/database/: _model_finder.py  main.py  metadata.py
stories/stories/dtos/: base.py
stories/stories/exc/: __init__.py  _exception_handlers.py  _exceptions.py
stories/stories/providers/: __init__.py  _database.py  _http.py
stories/stories/routes/: __init__.py  _route.py
stories/stories/routes/dependencies/: __init__.py  _database.py  _http.py
stories/stories/utils/: __init__.py  _environment.py
stories/tests/: test_stories.py
